testdata/baselines/reference/submodule/conformance/checkJsdocSatisfiesTag11.errors.txt
/a.js(20,28): error TS8037: Type satisfaction expressions can only be used in TypeScript files.


==== /a.js (1 errors) ====
    /**
     * @typedef {Object} T1
     * @property {number} a
     */
    
    /**
     * @typedef {Object} T2
     * @property {number} a
     */
    
    /**
     * @satisfies {T1}
     * @satisfies {T2}
     */
    const t1 = { a: 1 };
    
    /**
     * @satisfies {number}
     */
    const t2 = /** @satisfies {number} */ (1);
                               ~~~~~~
!!! error TS8037: Type satisfaction expressions can only be used in TypeScript files.
    